[package]
name = "array__ops"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "A selection of useful array operations"
repository = "https://github.com/sigurd4/array_ops"
keywords = ["array", "util", "ops"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["slice_ops/std"]

[dependencies]
moddef = "0.2.2"
array_trait = "1.0.0"
slice_ops = "0.1.3"